<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">乐聊</string>
    <string name="main_rank_day">日榜</string>
    <string name="main_rank_week">周榜</string>
    <string name="main_rank_month">月榜</string>
    <string name="rankFormat">第%1$d名</string>
    <string name="rank_tab_gift">礼物总值:</string>
    <string name="rank_tab_money">花瓣总额:</string>
    <string name="mobile">手机号</string>
    <string name="password">密码</string>
    <string name="set_password">设置密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="yz_code">验证码</string>
    <string name="mine_tab_dynamic">我的动态</string>
    <string name="mine_tab_beauty">美颜设置</string>
    <string name="mine_tab_real_name">实名认证</string>
    <string name="user_info_account">账号信息</string>
    <string name="user_info_personal">个人信息</string>
    <string name="user_info_tag">标签</string>
    <string name="user_info_receive">收到的礼物  %1$s</string>
    <string name="user_info_send">送出的礼物  %1$s</string>
    <string name="visitor_of_his">谁看过他</string>
    <string name="visitor_of_her">谁看过她</string>
    <string name="social_id">社交号：%1$s</string>
    <string name="registerTime">注册日期：%1$s</string>
    <string name="homeTown">家乡：%1$s</string>
    <string name="emotion">情感状态：%1$s</string>
    <string name="constellation">星座：%1$s</string>
    <string name="job">职业：%1$s</string>
    <string name="signature">个人签名：%1$s</string>
    <string name="title_headphoto">用户头像</string>
    <string name="title_nickname">昵称</string>
    <string name="title_birthday">出生日期</string>
    <string name="title_emotion_state">情感状态</string>
    <string name="title_signature">个人签名</string>
    <string name="title_hometown">家乡</string>
    <string name="title_job">职业</string>
    <string name="title_tag">标签</string>
    <string name="title_album">个人相册</string>
    <string name="add_idcard_hint">请确保头像、姓名、身份证号码清晰完整；\n遮挡、模糊、不完整的身份证照片都将导致审核不通过。</string>
    <string name="compose_hint">这一刻，想和大家分享点什么？</string>
    <string name="compose_warning">尊敬的用户，您发布的内容须遵守相关法律法规，请严重遵守相关规定，以免违规。</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="permission_camera_rationale">使用乐聊前需要开启相关权限</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access to the contacts database.</string>
    <string name="permission_camera_denied">相关权限被拒绝，请到设置中开启</string>
    <string name="permission_camera_never_ask_again">Camera permission was denied with never ask again.</string>
    <string name="empty"></string>
    <string name="main_tab_session">会话</string>
    <string name="main_tab_contact">通讯录</string>
    <string name="user_profile">个人名片</string>
    <string name="login">登录</string>
    <string name="logining">登录中\u2026</string>
    <string name="register">注册</string>
    <string name="registering">注册中\u2026</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="network_is_not_available">网络连接失败，请检查你的网络设置</string>
    <string name="login_hint_account">请输入帐号</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="input_account">请输入帐号，限20位字母或者数字</string>
    <string name="register_account_tip">帐号限20位字母或者数字</string>
    <string name="input_nickname">请输入昵称，限10位汉字、字母或者数字</string>
    <string name="register_nick_name_tip">昵称限10位汉字、字母或者数字</string>
    <string name="input_password">请输入密码，6~20位字母或者数字</string>
    <string name="register_password_tip">密码必须为6~20位字母或者数字</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败,错误码%1$s:%2$s</string>
    <string name="login_has_account">已有帐号？直接登录</string>
    <string name="done">完成</string>
    <string name="prepare_data">正在准备数据...</string>
    <string name="readed">已读</string>
    <string name="unread">未读</string>
    <string name="about">关于</string>
    <string name="privatization_config">私有化配置</string>
    <string name="logout">注销</string>
    <string name="add">添加</string>
    <string name="remove">移除</string>
    <string name="menu">菜单</string>
    <string name="verify_reminder">验证提醒</string>
    <string name="without_content">暂无</string>
    <string name="create">新建</string>
    <string name="delete_tip">删除提示</string>
    <string name="delete_system_message">删除该条系统消息？</string>
    <string name="delete_success">删除成功</string>
    <string name="clear_all_success">清空成功</string>
    <string name="login_failed">帐号或密码错误</string>
    <string name="login_exception">无效输入</string>
    <string name="file_browser">文件浏览器</string>
    <string name="upload_text">上传</string>
    <string name="download_text">下载</string>
    <string name="now_allow_space">不能含有空格</string>
    <string name="open">开启</string>
    <string name="close">关闭</string>
    <string name="search_advanced_team">搜索高级群</string>
    <string name="net_broken">当前网络不可用</string>
    <string name="nim_status_unlogin">未登录</string>
    <string name="nim_status_connecting">连接中...</string>
    <string name="nim_status_logining">登录中...</string>
    <string name="copyright">Copyright ©1997-2019 网易公司版权所有</string>
    <string name="user_not_exsit">该用户不存在</string>
    <string name="user_tips">请检查你输入的帐号是否正确</string>
    <string name="edit">编辑</string>
    <string name="input_panel_guess">猜 拳</string>
    <string name="input_panel_audio_call">语音通话</string>
    <string name="input_panel_video_call">视频通话</string>
    <string name="input_panel_file">发送文件</string>
    <string name="input_panel_RTS">白 板</string>
    <string name="input_panel_snapchat">阅后即焚</string>
    <string name="input_panel_tip">Tip</string>
    <string name="input_panel_ack_msg">已读回执</string>
    <string name="message_history_query">云消息记录</string>
    <string name="message_search_title">搜索本地消息记录</string>
    <string name="message_clear">清空本地消息记录</string>
    <string name="message_p2p_clear">清空点对点历史消息</string>
    <string name="message_p2p_clear_tips">确定清空点对点历史消息?</string>
    <string name="sure_keep_roam">确认单保留漫游</string>
    <string name="message_info">聊天信息</string>
    <string name="add_friend">加为好友</string>
    <string name="remove_friend">删除好友</string>
    <string name="begin_chat">聊天</string>
    <string name="remove_friend_tip">删除好友后，将同时解除双方的好友关系</string>
    <string name="remove_friend_success">删除好友成功</string>
    <string name="add_friend_self_tip">不能添加自己为好友</string>
    <string name="add_friend_verify_tip">好友验证请求</string>
    <string name="black_list_tip">你不会接收到列表中联系人的任何消息</string>
    <string name="add_buddy">添加好友</string>
    <string name="create_normal_team">创建讨论组</string>
    <string name="team_apply_sending">发送中…</string>
    <string name="no_team">您还没有群</string>
    <string name="no_normal_team">您还没有讨论组</string>
    <string name="team_search_hint">请输入群号进行搜索</string>
    <string name="team_number_not_exist">群号不存在</string>
    <string name="team_join">加入群组</string>
    <string name="team_join_success">成功加入群: %1$s</string>
    <string name="team_apply_to_join_send_success">申请已发出</string>
    <string name="has_exist_in_team">已经在群里</string>
    <string name="team_num_limit">群数量已达上限</string>
    <string name="custom_notification">自定义通知</string>
    <string name="select_custom_notification_target">选择发送对象</string>
    <string name="send_custom_notification_tip">请输入要发送的内容</string>
    <string name="send_custom_notification_success">自定义通知发送成功</string>
    <string name="send_custom_notification_failed">自定义通知发送失败</string>
    <string name="send_custom_notification_to_buddy">发送给好友</string>
    <string name="send_custom_notification_to_team">发送给群组</string>
    <string name="msg_type_image">图片</string>
    <string name="msg_type_audio">语音</string>
    <string name="location_navigate">导航</string>
    <string name="location_loading">正在定位</string>
    <string name="location_map">地图定位</string>
    <string name="my_location">我的位置</string>
    <string name="location_address_unkown">该位置信息暂无</string>
    <string name="format_mylocation">我的位置：%s</string>
    <string name="location_address_fail">获取位置信息失败</string>
    <string name="tools_selected">选择工具</string>
    <string name="friends_map_navigation_web">在网页中打开</string>
    <string name="location_open_map_error">打开地图出错</string>
    <string name="about_clear_msg_history">清空所有聊天记录</string>
    <string name="clear_msg_history_success">聊天记录已清空</string>
    <string name="nim_status_bar_multi_messages_incoming">%1$d位联系人有新消息</string>
    <string name="nim_status_bar_ticker_text">%1$s有新消息</string>
    <string name="nim_status_bar_image_message">%1$s发来一条图片消息</string>
    <string name="nim_status_bar_audio_message">%1$s发来一条语音消息</string>
    <string name="nim_status_bar_video_message">%1$s发来一条视频消息</string>
    <string name="nim_status_bar_file_message">%1$s发来一条文件消息</string>
    <string name="nim_status_bar_location_message">%1$s分享了一个地理位置</string>
    <string name="nim_status_bar_notification_message">%1$s: 通知消息</string>
    <string name="nim_status_bar_custom_message">%1$s: 自定义消息</string>
    <string name="nim_status_bar_unsupported_message">%1$s: 无法显示该内容</string>
    <string name="nim_status_bar_hidden_msg_content">你收到一条新消息</string>
    <string name="settings">设置</string>
    <string name="no_disturb">免打扰</string>
    <string name="multiport_push">PC/Web在线推送</string>
    <string name="msg_notice">消息提醒</string>
    <string name="recent_sticky">消息置顶</string>
    <string name="setting_about">关于</string>
    <string name="setting_close">已关闭</string>
    <string name="no_disturb_tips">在设定的时间段内云信消息提醒将不再响铃振动,如果开启了不显示通知，则通知不再显示</string>
    <string name="time_from">从</string>
    <string name="time_to">至</string>
    <string name="time_from_default">22:00</string>
    <string name="time_to_default">08:00</string>
    <string name="black_list">黑名单</string>
    <string name="msg_speaker">听筒模式</string>
    <string name="ring">响铃模式</string>
    <string name="vibrate">振动模式</string>
    <string name="led">自定义呼吸灯</string>
    <string name="notice_content">通知栏标题定制</string>
    <string name="clear_index">清理全文检索缓存</string>
    <string name="clear_sdk_cache">清理SDK文件缓存</string>
    <string name="push_no_detail">推送不展示消息详情</string>
    <string name="operation_too_frequent">操作太频繁</string>
    <string name="setting_private_config">私有化配置</string>
    <string name="private_config_note"> \n 1.私有化配置的将在app重启后生效，请注销登陆并杀掉进程。
        \n 2.如果要切换到环境，关闭或打开开关退出登陆杀掉进程即可。\n </string>
    <string name="local_db_migration">本地消息迁移</string>
    <string name="delete_friend_is_delete_alias">删除好友是否同步删除备注</string>
    <string name="multiport_manager">多端登录管理</string>
    <string name="multiport_logout">下线</string>
    <string name="computer_version">云信电脑版</string>
    <string name="web_version">云信网页版</string>
    <string name="mobile_version">云信移动版</string>
    <string name="multiport_logging">正在使用</string>
    <string name="kickout_notify">下线通知</string>
    <string name="kickout_content">你的帐号被%1$s踢出下线，请确定帐号信息安全</string>
    <string name="on_line">在线</string>
    <string name="on_line_pc">PC在线</string>
    <string name="on_line_mac">Mac在线</string>
    <string name="on_line_web">web在线</string>
    <string name="client_aos">Android</string>
    <string name="client_ios">iOS</string>
    <string name="on_line_busy">忙碌</string>
    <string name="off_line">离线</string>
    <string name="snapchat_longclick_to_view">按住查看</string>
    <string name="birthday">生 日</string>
    <string name="phone">手 机</string>
    <string name="email">邮 箱</string>
    <string name="head">头 像</string>
    <string name="user_information">个人信息</string>
    <string name="nickname">昵 称</string>
    <string name="alias">备注名</string>
    <string name="gender">性 别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="other">其他</string>
    <string name="phone_number">手机号码</string>
    <string name="set_head_image">设置头像</string>
    <string name="user_info_update_success">设置成功</string>
</resources>