<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/titlebar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp44"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/vp_close"
                android:layout_width="@dimen/dp44"
                android:layout_height="@dimen/dp44">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_toolbar_back_gray_24dp" />
            </FrameLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp16"
                android:layout_gravity="center_vertical"
                android:textColor="@color/color_333333"
                android:text="编辑资料"/>


            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp14"
                android:layout_gravity="right|center_vertical"
                android:paddingVertical="@dimen/dp5"
                android:paddingHorizontal="@dimen/dp14"
                app:bl_corners_radius="@dimen/dp14"
                app:bl_unEnabled_drawable="@color/colorPrimaryUnable"
                app:bl_enabled_drawable="@color/colorPrimary"
                android:text="保存"
                android:textColor="@color/white"
                android:textSize="@dimen/sp13" />

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider_linear_chid"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/dp14"
                    android:paddingBottom="@dimen/dp14"
                    android:showDividers="middle">

                    <LinearLayout
                        android:id="@+id/vp_headphoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/dp20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_headphoto"
                            android:textColor="@color/color_4a4a4a"
                            android:textSize="@dimen/sp15" />

                        <View
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"/>

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="@dimen/dp60"
                            android:layout_height="@dimen/dp60"
                            android:src="@drawable/ic_girl" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp7"
                            android:src="@mipmap/right_going" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/vp_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/dp20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_nickname"
                            android:textColor="@color/color_4a4a4a"
                            android:textSize="@dimen/sp15" />

                        <TextView
                            android:id="@+id/tv_nickname"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp20"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="right"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:textColor="@color/color_c1c1c1"
                            android:textSize="@dimen/sp15"
                            tools:text="@string/title_nickname" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp7"
                            android:src="@mipmap/right_going" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vp_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/dp20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_birthday"
                            android:textColor="@color/color_4a4a4a"
                            android:textSize="@dimen/sp15" />

                        <TextView
                            android:id="@+id/tv_birthday"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp20"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="right"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:textColor="@color/color_c1c1c1"
                            android:textSize="@dimen/sp15"
                            tools:text="@string/title_birthday" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp7"
                            android:src="@mipmap/right_going" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/vp_emotion_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/dp20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_emotion_state"
                            android:textColor="@color/color_4a4a4a"
                            android:textSize="@dimen/sp15" />

                        <TextView
                            android:id="@+id/tv_emotion_state"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp20"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="right"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:textColor="@color/color_c1c1c1"
                            android:textSize="@dimen/sp15"
                            tools:text="@string/title_emotion_state" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp7"
                            android:src="@mipmap/right_going" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vp_signature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/dp20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_signature"
                            android:textColor="@color/color_4a4a4a"
                            android:textSize="@dimen/sp15" />

                        <TextView
                            android:id="@+id/tv_signature"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp20"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="right"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:textColor="@color/color_c1c1c1"
                            android:textSize="@dimen/sp15"
                            tools:text="@string/title_signature" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp7"
                            android:src="@mipmap/right_going" />


                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/vp_hometown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/dp20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_hometown"
                            android:textColor="@color/color_4a4a4a"
                            android:textSize="@dimen/sp15" />

                        <TextView
                            android:id="@+id/tv_hometown"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp20"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="right"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:textColor="@color/color_c1c1c1"
                            android:textSize="@dimen/sp15"
                            tools:text="@string/title_hometown" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp7"
                            android:src="@mipmap/right_going" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vp_job"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/dp20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_job"
                            android:textColor="@color/color_4a4a4a"
                            android:textSize="@dimen/sp15" />

                        <TextView
                            android:id="@+id/tv_job"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp20"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="right"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:textColor="@color/color_c1c1c1"
                            android:textSize="@dimen/sp15"
                            tools:text="@string/title_job" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp7"
                            android:src="@mipmap/right_going" />


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/vp_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingVertical="@dimen/dp20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_tag"
                            android:textColor="@color/color_4a4a4a"
                            android:textSize="@dimen/sp15" />

                        <TextView
                            android:id="@+id/tv_tag"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp20"
                            android:layout_weight="1"
                            android:ellipsize="end"
                            android:gravity="right"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:textColor="@color/color_c1c1c1"
                            android:textSize="@dimen/sp15"
                            tools:text="@string/title_tag" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp7"
                            android:src="@mipmap/right_going" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/dp20">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/title_album"
                            android:textColor="@color/color_4a4a4a"
                            android:textSize="@dimen/sp15" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp14"
                            android:nestedScrollingEnabled="false" />


                    </LinearLayout>




            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>



    </LinearLayout>
</layout>